# fp-ds-proj-template

./: .gitignore  DONE.md  LICENSE  Pipfile  README.md  TODO.md  pyproject.toml  setup.py
config/ydata_yaml/: ydata_profiling_config.yaml
docs/notes/: _scratch.md
examples/: example.py
jobs/python/: example.py
notebooks/: _scratch.ipynb
notebooks/.templates/: df_unemp_states-20230418.parquet  xgboost_timeseries_modeling_template.ipynb
notebooks/explore/: xgboost_explore_kaggle.ipynb
notebooks/templates/: fp-analytics-template-3.1.ipynb  xgboost_timeseries_modeling_template.ipynb
prompts/chatgpt/: _prompt_template.md
scripts/batch/: git-pre-push-hook-script.bat  scratch.bat
scripts/batch/project_push_sync/: project_sync_to_onedrive.bat
scripts/batch/templates/: pipenv_proj_setup_template.bat  win_task_schedule_setup_template.bat
src/tests/test_data/: test_template.py
tools/in_development/: excel_auto_eda-v0.01.xlsm
workbooks/.templates/: excel_auto_eda-poetry-v0.20.xlsm
